external/lib25519-20241004/build/arm64/unified/fe25519squareS/2/shared/result-compile-fe25519_square
fe25519_square.S:142:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
